# career-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  devenv.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  deps.py  main.py
backend/app/crud/: application.py  base.py  experience.py  job.py  resume.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_initial_users.py  0002_experiences.py  0003_resumes.py  0004_applications.py  0005_jobs.py
backend/app/models/: __init__.py  application.py  experience.py  job.py  resume.py  user.py
backend/app/routers/: ai.py  applications.py  auth.py  dashboard.py  experiences.py  health.py  jobs.py  resumes.py
backend/app/schemas/: ai.py  application.py  auth.py  dashboard.py  experience.py  job.py  resume.py
backend/app/services/: auth.py  dashboard.py  job_match.py  resume_export.py  resume_generation.py
backend/app/services/ai/: anthropic.py  base.py  factory.py  openai.py
backend/app/workers/: __init__.py  celery_app.py  resume_tasks.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_crud.py  test_dashboard.py  test_experiences.py  test_health.py
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx
infrastructure/: README.md
infrastructure/images/: README.md  backend.nix  frontend.nix
planning/: product-design.md
scripts/: README.md  reset.py  seed-jobs.py  seed.py  wipe.py
(+161 files in other folders)
